@startuml Decorator_Pricing_Pipeline_Architecture

!pragma layout smetana

' Cấu hình chuyên nghiệp
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #4A90D9
skinparam classHeaderFontColor #FFFFFF
skinparam classBorderColor #2C5F8A
skinparam classBackgroundColor #F0F7FF
skinparam stereotypeCBackgroundColor #E8F4FD
skinparam ArrowColor #2C5F8A

title Kiến trúc Hệ thống Tính giá (Decorator + Strategy + Delegation)

' =============================================
' 1. CORE COMPONENT (Decorator Pattern)
' =============================================
package "Core Pricing Logic" {
    interface PriceComponent <<interface>> {
        + calculate() : BigDecimal
        + getDescription() : String
    }

    class BasePrice {
        - amount : BigDecimal
        + calculate() : BigDecimal
        + getDescription() : String
    }

    abstract class PriceDecorator {
        # wrapped : PriceComponent
        + calculate() : BigDecimal
        + getDescription() : String
    }

    class PromotionDecorator {
        - discountStrategy : DiscountStrategy
        + calculate() : BigDecimal
        + getDescription() : String
    }
}

' =============================================
' 2. STRATEGY PATTERN (Discount Logic - Math Only)
' =============================================
package "Discount Strategies" {
    interface DiscountStrategy <<interface>> {
        + apply(BigDecimal) : BigDecimal
        + getName() : String
    }

    class NoDiscountStrategy {
        + apply(basePrice) : BigDecimal
    }

    class PercentDiscountStrategy {
        - percent : int
        - maxDiscount : BigDecimal
        + apply(basePrice) : BigDecimal
    }

    class FixedAmountDiscountStrategy {
        - discountAmount : BigDecimal
        + apply(basePrice) : BigDecimal
    }
}

' =============================================
' 3. SERVICE LAYER (The Brain)
' =============================================
package "Service Layer" {
    class PricingService {
        + getPricePipeline(Order) : PriceComponent
        + calculateFinalTotal(Order) : BigDecimal
        + calculateSubtotal(Order) : BigDecimal
        - calculateItemSubtotal(OrderItem) : BigDecimal
        - createStrategy(PromotionDetail) : DiscountStrategy
    }

    class PriceServiceImpl {
        - pricingService : PricingService
        + calculateTotal(Order, promoCode) : void
    }
}

' =============================================
' RELATIONSHIPS
' =============================================

' Decorator Pattern Structure
PriceComponent <|-- BasePrice
PriceComponent <|-- PriceDecorator
PriceDecorator "1" o--> "1" PriceComponent : "wraps"
PriceDecorator <|-- PromotionDecorator

' Strategy integration
PromotionDecorator --> DiscountStrategy : "uses"
DiscountStrategy <|-- NoDiscountStrategy
DiscountStrategy <|-- PercentDiscountStrategy
DiscountStrategy <|-- FixedAmountDiscountStrategy

' Orchestration
PriceServiceImpl o-- PricingService : "delegates" >
PricingService ..> PriceComponent : "builds pipeline" >
PricingService ..> DiscountStrategy : "selects & creates math strategy" >

note bottom of PricingService
  Hệ thống tính giá được refactor hoàn toàn theo hướng "Anemic Entities".
  Tất cả logic tính toán (Subtotal, Toppings, Discounts) tập trung tại đây.
  PricingService trực tiếp ánh xạ PromotionDetail sang các Strategy toán học thuần túy.
end note

@enduml
